--- a/clusters/my-cluster/helmrelease_finaltest_nrf.yaml
+++ b/clusters/my-cluster/helmrelease_finaltest_nrf.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   chart:
     spec:
-      chart: ./repo/free5gc-nrf-0.1.0.tgz
+      chart: ./repo/free5gc-nrf-0.2.1.tgz
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: GitRepository
@@ -26,7 +26,7 @@ spec:
           type: ClusterIP
       projectName: free5gc
       sbi:
-        scheme: http
+        scheme: https
     initcontainers:
       busybox:
         image: busybox
