flux_python added namespace_finaltest.yaml to kustomization.yaml

--- a/clusters/my-cluster/flux-system/kustomization.yaml
+++ b/clusters/my-cluster/flux-system/kustomization.yaml
@@ -4,3 +4,12 @@ resources:
 - proxyconfig.yaml
 - gotk-components.yaml
 - gotk-sync.yaml
+- namespace_finaltest.yaml
+- namespace_finaltest.yaml
+- namespace_finaltest.yaml
+- namespace_finaltest.yaml
+- namespace_finaltest.yaml
+- namespace_finaltest.yaml
+- namespace_finaltest.yaml
+- namespace_finaltest.yaml
+- namespace_finaltest.yaml
